# cozy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.ja.md  README.md  TESTING.md  config.example.toml  config.toml
docs/: EVALUATION.md  README.md
docs/announcements/: cozy-v0.1.5-intro.md
docs/architecture/: ARCHITECTURE.md
docs/releases/: v0.1.5.md
scripts/: test_features.sh  test_file_open.sh
src/: clipboard_io.rs  commands.rs  config_io.rs  debug_shortcuts.rs  event_loop.rs  file_io.rs  glide.rs  host.rs  input.rs  lib.rs  main.rs  runtime_env.rs  shortcuts.rs
src/action/: action.rs  mod.rs
src/browse/: mod.rs
src/reducer/: browse.rs  buffer.rs  clipboard.rs  command.rs  cursor.rs  delete.rs  editor.rs  editor_test.rs  file.rs  helper.rs  insert.rs  mod.rs  operator.rs  replace.rs  search.rs  status.rs
src/state/: buffer.rs  cursor.rs  editor.rs  key.rs  mod.rs
src/ui/: keymap.rs  mod.rs
src/ui/render/: body.rs  browse.rs  footer.rs  markdown.rs  mod.rs  screen.rs
src/utils/: file.rs  highlight.rs  loop_guard.rs  mod.rs  syntax.rs  terminal.rs  unicode.rs  wrap.rs
